# azure-ad-interactor

./: README.md  azure_ad_interactor.py  example.py  pyproject.toml
