[tool.poetry]
name = "azure-ad-interactor"
version = "0.1.0"
description = ""
authors = ["Gabriel Chamon Araujo <gabriel.chamon@tutanota.com>"]
license = "Apache V2"
readme = "README.md"
packages = [{include = "azure_ad_interactor.py"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
azure-identity = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
